language-server/src/tests/snapshots/gleam_language_server__tests__completion__local_variable_ignored.snap
---
source: language-server/src/tests/completion.rs
expression: "\nfn wibble() {\n  let a = 1\n  let _b = 2\n\n}\n"
---
fn wibble() {
  let a = 1
  let _b = 2
|
}


----- Completion content -----
$return
  kind:   Keyword
  detail: Keyword
  sort:   4_$return
  edits:
    [4:0-4:0]: "$return"
Error
  kind:   Constructor
  detail: gleam
  sort:   4_Error
False
  kind:   EnumMember
  detail: gleam
  sort:   4_False
Nil
  kind:   EnumMember
  detail: gleam
  sort:   4_Nil
Ok
  kind:   Constructor
  detail: gleam
  sort:   4_Ok
True
  kind:   EnumMember
  detail: gleam
  sort:   4_True
a
  kind:   Variable
  detail: Int
  sort:   2_a
  desc:   app
  docs:   "A locally defined variable."
  edits:
    [4:0-4:0]: "a"
wibble
  kind:   Function
  detail: fn() -> Int
  sort:   2_wibble
  desc:   app
  edits:
    [4:0-4:0]: "wibble"
